--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "NTU",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "dependencies": {
+    "ejs": "latest",
+    "aws-sdk": "latest",
+    "express": "latest",
+    "body-parser": "latest"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "YCL",
   "license": "ISC",
